fixed container flex-wrap

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -157,7 +157,7 @@
 .posts-row {
   height: 100%;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   overflow-x: scroll;
 }
 
